[package]
name = "api-mock-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.5", features = ['chrono'] }
rand = "0.8"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
chrono = { version = "0.4.35", features = ["serde"] }
axum = { version = "0.7.4" }
axum-macros = "0.4.1"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "json",
] }
anyhow = "1.0.79"
tower-cookies = "0.10.0"
strum_macros = "0.25"
lazy-regex = "2"
async-trait = "0.1"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "migrate",
    "time",
    "uuid",
    "chrono",
    "macros",
] }
derive_more = "0.99.17"
serial_test = "3"

[dev-dependencies]

[build]
rustflags = ["--cfg=sqlx_macros_unstable"]
